@@ -299,6 +299,8 @@ if (isset($_POST['assignment'])) {
 		$SESSION->redirect('?'.$SESSION->get('backto'));
 	}
 
+	$a['alltariffs'] = isset($a['alltariffs']);
+
 	$SMARTY->assign('error', $error);
 }
 else
