@@ -66,13 +66,34 @@
 					{if $promotionschemas}
 						<option value="-2" data-tarifftype="0" {if $assignment.tariffid == -2} selected{/if}>- {trans("per promotion schema")} -</option>
 					{/if}
-	
+
 					{foreach $tariffs as $tariff}
-						<option value="{$tariff.id}" data-tarifftype="{$tariff.tarifftype}" {if $tariff.id==$assignment.tariffid} selected{/if}>
+						<option value="{$tariff.id}" data-tarifftype="{$tariff.tarifftype}" {if $tariff.id==$assignment.tariffid} selected{/if} data-valid="{$tariff.valid}"{if !$tariff.valid} class="blend"{if !$assignment.alltariffs} style="display: none;"{/if}{/if}>
 						{$tariff.name} ({if ConfigHelper::checkConfig('privileges.superuser') || !ConfigHelper::checkConfig('privileges.hide_finances')}{$tariff.value|money_format}{/if}{if $tariff.upceil || $tariff.downceil}, {$tariff.downceil}/{$tariff.upceil} kbit/s{/if})
 						</option>
 					{/foreach}
 				</select>
+				<label>
+					<input type="checkbox" name="assignment[alltariffs]" {tip text="Check if all tariffs should be displayed" trigger="alltariffs"}{if $assignment.alltariffs} checked{/if}>
+					{trans("show all tariffs")}
+				</label>
+				<script type="text/javascript">
+				<!--
+					$(function() {
+						$('[name="assignment[alltariffs]"]').click(function() {
+							var checked = this.checked;
+							$('select>option', $(this).closest('td')).each(function() {
+								if ($(this).attr('data-valid') == '0') {
+									$(this).css('display', checked ? '' : 'none');
+									if (!checked && $(this).parent().val() == $(this).val()) {
+										$(this).parent().val('');
+									}
+								}
+							});
+						});
+					});
+				//-->
+				</script>
 			</TD>
 		</TR>
     </THEAD>
